lib/parser/ircv3.js
module.exports = (function() {
  "use strict";

  /*
   * Generated by PEG.js 0.9.0.
   *
   * http://pegjs.org/
   */

  function peg$subclass(child, parent) {
    function ctor() { this.constructor = child; }
    ctor.prototype = parent.prototype;
    child.prototype = new ctor();
  }

  function peg$SyntaxError(message, expected, found, location) {
    this.message  = message;
    this.expected = expected;
    this.found    = found;
    this.location = location;
    this.name     = "SyntaxError";

    if (typeof Error.captureStackTrace === "function") {
      Error.captureStackTrace(this, peg$SyntaxError);
    }
  }

  peg$subclass(peg$SyntaxError, Error);

  function peg$parse(input) {
    var options = arguments.length > 1 ? arguments[1] : {},
        parser  = this,

        peg$FAILED = {},

        peg$startRuleFunctions = { Message: peg$parseMessage },
        peg$startRuleFunction  = peg$parseMessage,

        peg$c0 = function(tags, pre, cmd, params) { return {tags: tags, prefix: pre, command: cmd, parameters: params};},
        peg$c1 = function(tagsAndSpace) { return tagsAndSpace ? tagsAndSpace[0] : {}; },
        peg$c2 = function(spaceAndParams) { return spaceAndParams ? spaceAndParams[1] : []; },
        peg$c3 = function(prefixAndSpace) { return prefixAndSpace ? prefixAndSpace[0] : {}; },
        peg$c4 = function(tags) {
                var map = Object.create(null);
                for (var i = 0; i < tags.length; i++) {
                    map[tags[i].key] = tags[i].value;
                }

                return map;
            },
        peg$c5 = { type: "other", description: "message tag prefix (@)" },
        peg$c6 = "@",
        peg$c7 = { type: "literal", value: "@", description: "\"@\"" },
        peg$c8 = function(head, tail) { return [head].concat(tail); },
        peg$c9 = function(head) { return [head]; },
        peg$c10 = { type: "other", description: "tag delimiter (;)" },
        peg$c11 = ";",
        peg$c12 = { type: "literal", value: ";", description: "\";\"" },
        peg$c13 = function(key, value) { return {key: key, value: value ? value[1] : true}},
        peg$c14 = { type: "other", description: "message tag key" },
        peg$c15 = "/",
        peg$c16 = { type: "literal", value: "/", description: "\"/\"" },
        peg$c17 = "-",
        peg$c18 = { type: "literal", value: "-", description: "\"-\"" },
        peg$c19 = { type: "other", description: "tag key/value delimiter (=)" },
        peg$c20 = "=",
        peg$c21 = { type: "literal", value: "=", description: "\"=\"" },
        peg$c22 = { type: "other", description: "message tag value" },
        peg$c23 = function(server) { return {servername: server}; },
        peg$c24 = function(nick, user, host) { return {nickname: nick, user: user, host: host};},
        peg$c25 = function(nick, host) { return {nickname: nick, host: host};},
        peg$c26 = function(nick) { return {nickname: nick}; },
        peg$c27 = { type: "other", description: "prefix character (:)" },
        peg$c28 = ":",
        peg$c29 = { type: "literal", value: ":", description: "\":\"" },
        peg$c30 = { type: "other", description: "nickname" },
        peg$c31 = function(user) { return user; },
        peg$c32 = { type: "other", description: "user prefix (!)" },
        peg$c33 = "!",
        peg$c34 = { type: "literal", value: "!", description: "\"!\"" },
        peg$c35 = { type: "other", description: "username" },
        peg$c36 = function(host) { return host; },
        peg$c37 = { type: "other", description: "host prefix (@)" },
        peg$c38 = { type: "other", description: "hostname" },
        peg$c39 = ".",
        peg$c40 = { type: "literal", value: ".", description: "\".\"" },
        peg$c41 = { type: "other", description: "command" },
        peg$c42 = function(params, trailing) { return params.concat(trailing); },
        peg$c43 = function(params) { return params; },
        peg$c44 = function(trailing) { return [trailing]; },
        peg$c45 = { type: "other", description: "parameter" },
        peg$c46 = function(param) { return param; },
        peg$c47 = { type: "other", description: "trailing parameter prefix (:)" },
        peg$c48 = { type: "other", description: "trailing parameter" },
        peg$c49 = /^[a-zA-Z]/,
        peg$c50 = { type: "class", value: "[a-zA-Z]", description: "[a-zA-Z]" },
        peg$c51 = /^[0-9]/,
        peg$c52 = { type: "class", value: "[0-9]", description: "[0-9]" },
        peg$c53 = /^[A-Fa-f]/,
        peg$c54 = { type: "class", value: "[A-Fa-f]", description: "[A-Fa-f]" },
        peg$c55 = "[",
        peg$c56 = { type: "literal", value: "[", description: "\"[\"" },
        peg$c57 = "]",
        peg$c58 = { type: "literal", value: "]", description: "\"]\"" },
        peg$c59 = "\\",
        peg$c60 = { type: "literal", value: "\\", description: "\"\\\\\"" },
        peg$c61 = "`",
        peg$c62 = { type: "literal", value: "`", description: "\"`\"" },
        peg$c63 = "_",
        peg$c64 = { type: "literal", value: "_", description: "\"_\"" },
        peg$c65 = "^",
        peg$c66 = { type: "literal", value: "^", description: "\"^\"" },
        peg$c67 = "|",
        peg$c68 = { type: "literal", value: "|", description: "\"|\"" },
        peg$c69 = "{",
        peg$c70 = { type: "literal", value: "{", description: "\"{\"" },
        peg$c71 = "}",
        peg$c72 = { type: "literal", value: "}", description: "\"}\"" },
        peg$c73 = /^[^\r\n]/,
        peg$c74 = { type: "class", value: "[^\\r\\n]", description: "[^\\r\\n]" },
        peg$c75 = /^[^ \r\n]/,
        peg$c76 = { type: "class", value: "[^ \\r\\n]", description: "[^ \\r\\n]" },
        peg$c77 = /^[^ \r\n@]/,
        peg$c78 = { type: "class", value: "[^ \\r\\n@]", description: "[^ \\r\\n@]" },
        peg$c79 = /^[^ \r\n;]/,
        peg$c80 = { type: "class", value: "[^ \\r\\n;]", description: "[^ \\r\\n;]" },
        peg$c81 = /^[^ \r\n:]/,
        peg$c82 = { type: "class", value: "[^ \\r\\n:]", description: "[^ \\r\\n:]" },
        peg$c83 = { type: "other", description: "space" },
        peg$c84 = " ",
        peg$c85 = { type: "literal", value: " ", description: "\" \"" },
        peg$c86 = { type: "other", description: "CR+LF" },
        peg$c87 = "\n",
        peg$c88 = { type: "literal", value: "\n", description: "\"\\n\"" },
        peg$c89 = { type: "other", description: "valid IPv4 address" },
        peg$c90 = "25",
        peg$c91 = { type: "literal", value: "25", description: "\"25\"" },
        peg$c92 = /^[0-5]/,
        peg$c93 = { type: "class", value: "[0-5]", description: "[0-5]" },
        peg$c94 = "2",
        peg$c95 = { type: "literal", value: "2", description: "\"2\"" },
        peg$c96 = /^[0-4]/,
        peg$c97 = { type: "class", value: "[0-4]", description: "[0-4]" },
        peg$c98 = "1",
        peg$c99 = { type: "literal", value: "1", description: "\"1\"" },
        peg$c100 = /^[1-9]/,
        peg$c101 = { type: "class", value: "[1-9]", description: "[1-9]" },
        peg$c102 = { type: "other", description: "valid IPv6 address" },
        peg$c103 = "::",
        peg$c104 = { type: "literal", value: "::", description: "\"::\"" },

        peg$currPos          = 0,
        peg$savedPos         = 0,
        peg$posDetailsCache  = [{ line: 1, column: 1, seenCR: false }],
        peg$maxFailPos       = 0,
        peg$maxFailExpected  = [],
        peg$silentFails      = 0,

        peg$result;

    if ("startRule" in options) {
      if (!(options.startRule in peg$startRuleFunctions)) {
        throw new Error("Can't start parsing from rule \"" + options.startRule + "\".");
      }

      peg$startRuleFunction = peg$startRuleFunctions[options.startRule];
    }

    function text() {
      return input.substring(peg$savedPos, peg$currPos);
    }

    function location() {
      return peg$computeLocation(peg$savedPos, peg$currPos);
    }

    function expected(description) {
      throw peg$buildException(
        null,
        [{ type: "other", description: description }],
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function error(message) {
      throw peg$buildException(
        message,
        null,
        input.substring(peg$savedPos, peg$currPos),
        peg$computeLocation(peg$savedPos, peg$currPos)
      );
    }

    function peg$computePosDetails(pos) {
      var details = peg$posDetailsCache[pos],
          p, ch;

      if (details) {
        return details;
      } else {
        p = pos - 1;
        while (!peg$posDetailsCache[p]) {
          p--;
        }

        details = peg$posDetailsCache[p];
        details = {
          line:   details.line,
          column: details.column,
          seenCR: details.seenCR
        };

        while (p < pos) {
          ch = input.charAt(p);
          if (ch === "\n") {
            if (!details.seenCR) { details.line++; }
            details.column = 1;
            details.seenCR = false;
          } else if (ch === "\r" || ch === "\u2028" || ch === "\u2029") {
            details.line++;
            details.column = 1;
            details.seenCR = true;
          } else {
            details.column++;
            details.seenCR = false;
          }

          p++;
        }

        peg$posDetailsCache[pos] = details;
        return details;
      }
    }

    function peg$computeLocation(startPos, endPos) {
      var startPosDetails = peg$computePosDetails(startPos),
          endPosDetails   = peg$computePosDetails(endPos);

      return {
        start: {
          offset: startPos,
          line:   startPosDetails.line,
          column: startPosDetails.column
        },
        end: {
          offset: endPos,
          line:   endPosDetails.line,
          column: endPosDetails.column
        }
      };
    }

    function peg$fail(expected) {
      if (peg$currPos < peg$maxFailPos) { return; }

      if (peg$currPos > peg$maxFailPos) {
        peg$maxFailPos = peg$currPos;
        peg$maxFailExpected = [];
      }

      peg$maxFailExpected.push(expected);
    }

    function peg$buildException(message, expected, found, location) {
      function cleanupExpected(expected) {
        var i = 1;

        expected.sort(function(a, b) {
          if (a.description < b.description) {
            return -1;
          } else if (a.description > b.description) {
            return 1;
          } else {
            return 0;
          }
        });

        while (i < expected.length) {
          if (expected[i - 1] === expected[i]) {
            expected.splice(i, 1);
          } else {
            i++;
          }
        }
      }

      function buildMessage(expected, found) {
        function stringEscape(s) {
          function hex(ch) { return ch.charCodeAt(0).toString(16).toUpperCase(); }

          return s
            .replace(/\\/g,   '\\\\')
            .replace(/"/g,    '\\"')
            .replace(/\x08/g, '\\b')
            .replace(/\t/g,   '\\t')
            .replace(/\n/g,   '\\n')
            .replace(/\f/g,   '\\f')
            .replace(/\r/g,   '\\r')
            .replace(/[\x00-\x07\x0B\x0E\x0F]/g, function(ch) { return '\\x0' + hex(ch); })
            .replace(/[\x10-\x1F\x80-\xFF]/g,    function(ch) { return '\\x'  + hex(ch); })
            .replace(/[\u0100-\u0FFF]/g,         function(ch) { return '\\u0' + hex(ch); })
            .replace(/[\u1000-\uFFFF]/g,         function(ch) { return '\\u'  + hex(ch); });
        }

        var expectedDescs = new Array(expected.length),
            expectedDesc, foundDesc, i;

        for (i = 0; i < expected.length; i++) {
          expectedDescs[i] = expected[i].description;
        }

        expectedDesc = expected.length > 1
          ? expectedDescs.slice(0, -1).join(", ")
              + " or "
              + expectedDescs[expected.length - 1]
          : expectedDescs[0];

        foundDesc = found ? "\"" + stringEscape(found) + "\"" : "end of input";

        return "Expected " + expectedDesc + " but " + foundDesc + " found.";
      }

      if (expected !== null) {
        cleanupExpected(expected);
      }

      return new peg$SyntaxError(
        message !== null ? message : buildMessage(expected, found),
        expected,
        found,
        location
      );
    }

    function peg$parseMessage() {
      var s0, s1, s2, s3, s4, s5;

      s0 = peg$currPos;
      s1 = peg$parseOptionalTags();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseOptionalPrefix();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseCommand();
          if (s3 !== peg$FAILED) {
            s4 = peg$parseOptionalParameters();
            if (s4 !== peg$FAILED) {
              s5 = peg$parseCRLF();
              if (s5 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c0(s1, s2, s3, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseOptionalTags() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseTags();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSpace();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c1(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseOptionalParameters() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseSpace();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseParameters();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c2(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseOptionalPrefix() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parsePrefix();
      if (s2 !== peg$FAILED) {
        s3 = peg$parseSpace();
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 === peg$FAILED) {
        s1 = null;
      }
      if (s1 !== peg$FAILED) {
        peg$savedPos = s0;
        s1 = peg$c3(s1);
      }
      s0 = s1;

      return s0;
    }

    function peg$parseTags() {
      var s0, s1, s2;

      s0 = peg$currPos;
      s1 = peg$parseTagPrefix();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseTagList();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c4(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTagPrefix() {
      var s0, s1;

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 64) {
        s0 = peg$c6;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c7); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c5); }
      }

      return s0;
    }

    function peg$parseTagList() {
      var s0, s1, s2, s3;

      s0 = peg$currPos;
      s1 = peg$parseTag();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseTagDelimiter();
        if (s2 !== peg$FAILED) {
          s3 = peg$parseTagList();
          if (s3 !== peg$FAILED) {
            peg$savedPos = s0;
            s1 = peg$c8(s1, s3);
            s0 = s1;
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parseTag();
        if (s1 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c9(s1);
        }
        s0 = s1;
      }

      return s0;
    }

    function peg$parseTagDelimiter() {
      var s0, s1;

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 59) {
        s0 = peg$c11;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c12); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c10); }
      }

      return s0;
    }

    function peg$parseTag() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parseTagKey();
      if (s1 !== peg$FAILED) {
        s2 = peg$currPos;
        s3 = peg$parseTagKeyValueDelimiter();
        if (s3 !== peg$FAILED) {
          s4 = peg$parseTagValue();
          if (s4 !== peg$FAILED) {
            s3 = [s3, s4];
            s2 = s3;
          } else {
            peg$currPos = s2;
            s2 = peg$FAILED;
          }
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
        if (s2 === peg$FAILED) {
          s2 = null;
        }
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c13(s1, s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }

      return s0;
    }

    function peg$parseTagKey() {
      var s0, s1, s2, s3, s4;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$currPos;
      s3 = peg$parseHost();
      if (s3 !== peg$FAILED) {
        if (input.charCodeAt(peg$currPos) === 47) {
          s4 = peg$c15;
          peg$currPos++;
        } else {
          s4 = peg$FAILED;
          if (peg$silentFails === 0) { peg$fail(peg$c16); }
        }
        if (s4 !== peg$FAILED) {
          s3 = [s3, s4];
          s2 = s3;
        } else {
          peg$currPos = s2;
          s2 = peg$FAILED;
        }
      } else {
        peg$currPos = s2;
        s2 = peg$FAILED;
      }
      if (s2 === peg$FAILED) {
        s2 = null;
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseLetter();
        if (s4 === peg$FAILED) {
          s4 = peg$parseDigit();
          if (s4 === peg$FAILED) {
            if (input.charCodeAt(peg$currPos) === 45) {
              s4 = peg$c17;
              peg$currPos++;
            } else {
              s4 = peg$FAILED;
              if (peg$silentFails === 0) { peg$fail(peg$c18); }
            }
          }
        }
        if (s4 !== peg$FAILED) {
          while (s4 !== peg$FAILED) {
            s3.push(s4);
            s4 = peg$parseLetter();
            if (s4 === peg$FAILED) {
              s4 = peg$parseDigit();
              if (s4 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 45) {
                  s4 = peg$c17;
                  peg$currPos++;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
              }
            }
          }
        } else {
          s3 = peg$FAILED;
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c14); }
      }

      return s0;
    }

    function peg$parseTagKeyValueDelimiter() {
      var s0, s1;

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 61) {
        s0 = peg$c20;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c21); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c19); }
      }

      return s0;
    }

    function peg$parseTagValue() {
      var s0, s1, s2;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = [];
      s2 = peg$parseNonSpaceCRLFSemicolon();
      if (s2 !== peg$FAILED) {
        while (s2 !== peg$FAILED) {
          s1.push(s2);
          s2 = peg$parseNonSpaceCRLFSemicolon();
        }
      } else {
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c22); }
      }

      return s0;
    }

    function peg$parsePrefix() {
      var s0, s1, s2, s3, s4;

      s0 = peg$currPos;
      s1 = peg$parsePrefixChar();
      if (s1 !== peg$FAILED) {
        s2 = peg$parseHostname();
        if (s2 !== peg$FAILED) {
          peg$savedPos = s0;
          s1 = peg$c23(s2);
          s0 = s1;
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
      } else {
        peg$currPos = s0;
        s0 = peg$FAILED;
      }
      if (s0 === peg$FAILED) {
        s0 = peg$currPos;
        s1 = peg$parsePrefixChar();
        if (s1 !== peg$FAILED) {
          s2 = peg$parseNickname();
          if (s2 !== peg$FAILED) {
            s3 = peg$parseUserWithPrefix();
            if (s3 !== peg$FAILED) {
              s4 = peg$parseHostWithPrefix();
              if (s4 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c24(s2, s3, s4);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
        } else {
          peg$currPos = s0;
          s0 = peg$FAILED;
        }
        if (s0 === peg$FAILED) {
          s0 = peg$currPos;
          s1 = peg$parsePrefixChar();
          if (s1 !== peg$FAILED) {
            s2 = peg$parseNickname();
            if (s2 !== peg$FAILED) {
              s3 = peg$parseHostWithPrefix();
              if (s3 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c25(s2, s3);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          } else {
            peg$currPos = s0;
            s0 = peg$FAILED;
          }
          if (s0 === peg$FAILED) {
            s0 = peg$currPos;
            s1 = peg$parsePrefixChar();
            if (s1 !== peg$FAILED) {
              s2 = peg$parseNickname();
              if (s2 !== peg$FAILED) {
                peg$savedPos = s0;
                s1 = peg$c26(s2);
                s0 = s1;
              } else {
                peg$currPos = s0;
                s0 = peg$FAILED;
              }
            } else {
              peg$currPos = s0;
              s0 = peg$FAILED;
            }
          }
        }
      }

      return s0;
    }

    function peg$parsePrefixChar() {
      var s0, s1;

      peg$silentFails++;
      if (input.charCodeAt(peg$currPos) === 58) {
        s0 = peg$c28;
        peg$currPos++;
      } else {
        s0 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c29); }
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c27); }
      }

      return s0;
    }

    function peg$parseNickname() {
      var s0, s1, s2, s3, s4;

      peg$silentFails++;
      s0 = peg$currPos;
      s1 = peg$currPos;
      s2 = peg$parseLetter();
      if (s2 === peg$FAILED) {
        s2 = peg$parseSpecialChar();
      }
      if (s2 !== peg$FAILED) {
        s3 = [];
        s4 = peg$parseLetter();
        if (s4 === peg$FAILED) {
          s4 = peg$parseDigit();
          if (s4 === peg$FAILED) {
            s4 = peg$parseSpecialChar();
            if (s4 === peg$FAILED) {
              if (input.charCodeAt(peg$currPos) === 45) {
                s4 = peg$c17;
                peg$currPos++;
              } else {
                s4 = peg$FAILED;
                if (peg$silentFails === 0) { peg$fail(peg$c18); }
              }
            }
          }
        }
        while (s4 !== peg$FAILED) {
          s3.push(s4);
          s4 = peg$parseLetter();
          if (s4 === peg$FAILED) {
            s4 = peg$parseDigit();
            if (s4 === peg$FAILED) {
              s4 = peg$parseSpecialChar();
              if (s4 === peg$FAILED) {
                if (input.charCodeAt(peg$currPos) === 45) {
                  s4 = peg$c17;
                  peg$currPos++;
                } else {
                  s4 = peg$FAILED;
                  if (peg$silentFails === 0) { peg$fail(peg$c18); }
                }
              }
            }
          }
        }
        if (s3 !== peg$FAILED) {
          s2 = [s2, s3];
          s1 = s2;
        } else {
          peg$currPos = s1;
          s1 = peg$FAILED;
        }
      } else {
        peg$currPos = s1;
        s1 = peg$FAILED;
      }
      if (s1 !== peg$FAILED) {
        s0 = input.substring(s0, peg$currPos);
      } else {
        s0 = s1;
      }
      peg$silentFails--;
      if (s0 === peg$FAILED) {
        s1 = peg$FAILED;
        if (peg$silentFails === 0) { peg$fail(peg$c30); }
      }

      return s0;
    }

    function peg$parseUserWithPrefix() {
      var s0, s1, s2;
